// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OneOfAnt should render a radio button group by default 1`] = `
<Memo(ForwardRef)
  data-testid="id-test_radio_of_one"
  disabled={false}
  id="id-test_radio_of_one"
  label="Select one of"
  onChange={[Function]}
  readOnly={false}
>
  <span
    key="b"
  >
    <Radio
      data-testid="id-test_radio_of_one-b"
      key="b"
      style={Object {}}
      value="b"
    >
      Banana
    </Radio>
  </span>
  <span
    key="a"
  >
    <Radio
      data-testid="id-test_radio_of_one-a"
      key="a"
      style={Object {}}
      value="a"
    >
      Apples
    </Radio>
  </span>
  <span
    key="p"
  >
    <Radio
      data-testid="id-test_radio_of_one-p"
      key="p"
      style={Object {}}
      value="p"
    >
      Peaches
    </Radio>
  </span>
</Memo(ForwardRef)>
`;

exports[`OneOfDropDownAnt should render a dropdown control 1`] = `
<Dropdown
  data-testid="id-test_drop_down_of_one"
  disabled={false}
  label="Select one of"
  mouseEnterDelay={0.15}
  mouseLeaveDelay={0.1}
  overlay={
    <Menu
      data-testid="id.testDropDownOfOne-menu"
    >
      <MenuItem
        data-testid="id-test_drop_down_of_one-menu-b"
        onClick={[Function]}
      >
        Banana
      </MenuItem>
      <MenuItem
        data-testid="id-test_drop_down_of_one-menu-a"
        onClick={[Function]}
      >
        Apples
      </MenuItem>
      <MenuItem
        data-testid="id-test_drop_down_of_one-menu-p"
        onClick={[Function]}
      >
        Peaches
      </MenuItem>
    </Menu>
  }
  trigger={
    Array [
      "click",
    ]
  }
>
  <Button
    id="id-test_drop_down_of_one"
    style={
      Object {
        "alignItems": "center",
        "display": "inline-flex",
        "justifyContent": "space-between",
      }
    }
  >
    <span
      style={
        Object {
          "color": "#aaaaaa",
        }
      }
    >
      ...
    </span>
     
    <ForwardRef(DownOutlined) />
  </Button>
</Dropdown>
`;

exports[`OneOfDropDownFormAnt should render a dropdown control with form 1`] = `
<Memo(observerComponent)
  operation="bound OneOfImpl"
>
  <Memo(observerComponent)
    disabled={false}
    operation="bound OneOfImpl"
    readOnly={false}
  />
</Memo(observerComponent)>
`;

exports[`OneOfFormAnt should render a radio button group with form by default 1`] = `
<Memo(observerComponent)
  operation="bound OneOfImpl"
>
  <Memo(observerComponent)
    disabled={false}
    id="id-test_radio_of_one"
    operation="bound OneOfImpl"
    readOnly={false}
  />
</Memo(observerComponent)>
`;

exports[`OneOfSelectAnt should render a select control 1`] = `
<span>
  <ForwardRef(InternalSelect)
    data-testid="id.testSelectOfOne"
    disabled={false}
    id="id-test_select_of_one"
    label="Select one of"
    onChange={[Function]}
    placeholder="..."
  >
    <Option
      data-testid="id-test_select_of_one-b"
      key="b"
      value="b"
    >
      Banana
    </Option>
    <Option
      data-testid="id-test_select_of_one-a"
      key="a"
      value="a"
    >
      Apples
    </Option>
    <Option
      data-testid="id-test_select_of_one-p"
      key="p"
      value="p"
    >
      Peaches
    </Option>
  </ForwardRef(InternalSelect)>
</span>
`;

exports[`OneOfSelectFormAnt should render a select control with form 1`] = `
<Memo(observerComponent)
  operation="bound OneOfImpl"
>
  <Memo(observerComponent)
    disabled={false}
    id="id-test_select_of_one"
    operation="bound OneOfImpl"
    readOnly={false}
  />
</Memo(observerComponent)>
`;
